test/expected/explain_cf_v-c.out
explain void f() const
             ^
14: error: function can not be "const"
